# tdlib-sys

./: Cargo.toml  README.md  build.rs
.github/workflows/: bindings.yml  build.yml  osx-build.yml  windows-build.yml
td/: .gitrepo
td/example/web/tdweb/: package-lock.json  package.json
tdlib-bindgen/: COPYING  Cargo.toml  README.md  build.rs
