[package]
name = "tdlib-sys"
version = "0.1.0"
authors = ["Ed Cragg <drq.11235@gmail.com>"]
repository = "https://github.com/nuxeh/gperf-sys"
description = "Sys crate for Telegram's TDLib"
edition = "2018"
license = "ISC"
readme = "README.md"
build = "build.rs"
links = "tdjson"
exclude = [
  "/tdlib-bindgen",
  "**/auto/*"
]

[build-dependencies]
cmake = "0.1.42"

[dependencies]
libz-sys = "1.0.25"
openssl-sys = "0.9.55"

[features]
bundled_deps = ["static_zlib", "vendored_openssl"]
static_zlib = ["libz-sys/static"]
vendored_openssl = ["openssl-sys/vendored"]
